First commit with noisy working example using Cordova

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#cordova platforms
+platforms
+plugins
+
 # Logs
 logs
 *.log
@@ -56,4 +60,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
